# coconut

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  check.sh  coding-style.sh  ftests.sh
include/: Constants.hpp
sources/: CoconutStyleAction.cpp  CoconutStyleAction.hpp  ReportHandler.cpp  ReportHandler.hpp  Rule.cpp  Rule.hpp  main.cpp
sources/Rules/: RuleC3.cpp  RuleF4.cpp  RuleF7.cpp
sources/rules/: LambdaCallback.hpp  RuleC1.cpp  RuleC2.cpp  RuleC3.cpp  RuleF2.cpp  RuleF4.cpp  RuleF5.cpp  RuleF6.cpp  RuleF7.cpp  RuleF8.cpp  RuleG10.cpp  RuleG2.cpp  RuleG4.cpp  RuleG5.cpp  RuleH1.cpp  RuleH3.cpp  RuleL1.cpp  RuleL3.cpp  RuleL4.cpp  RuleL5.cpp  RuleL6.cpp  RuleO3.cpp  RuleO4.cpp  RuleV1.cpp  RuleV3.cpp  Rules.hpp  Rules.inc  RulesF5.cpp
tests/: README.md
tests/c1_flow.t/: Makefile  flow.c
tests/c2_ternaries.t/: Makefile  ternaries.c  ternaries.h
tests/c3_goto.t/: goto.c
tests/c3_goto_hidden.t/: Makefile  goto.c  goto.h
tests/f2.t/: Makefile  f2.c
tests/f4.t/: Makefile  f4.c
tests/f4_equal_limit.t/: Makefile  f4_equal_limit.c
tests/f5.t/: Makefile  f5.c
tests/f5_too_much.t/: :q  Makefile  f5_too_much.c
tests/f6.t/: Makefile  f6.c
tests/f7_structs.t/: Makefile  structs.c  structs.h
tests/f8.t/: Makefile  f8.c
tests/g10_asm.t/: Makefile  asm.c
tests/g2.t/: Makefile  not_error.c  separation.c
tests/g4_variables.t/: variables.c  variables.h
tests/g5.t/: Makefile  g5.c  g5.h  g5.inc
tests/goto_hidden.t/: Makefile
tests/h1_functions.t/: Makefile  functions.c  functions.h
tests/h1_types.t/: Makefile  types.c  (+1 more)
(+50 files in other folders)
